--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,7 @@
 
 
 @import 'bootstrap/scss/bootstrap';
-@import '@fontsource/montserrat';
+@import '@fontsource/montserrat/';
 @import '@fontsource/montserrat/700.css';
 
 body {
@@ -11,7 +11,7 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    background-attachment: fixed;
 }
 
 h1,
